--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <h2>Compétences</h2>
               <p>
 
-                Développeur technicien réseau, Monteur de pc fixe et pc portable (avec connaissances appronfondies des composants), très organisés, travailleur, manuel, vidéo montage, photographie...
+                Développeurs technicien réseau, Monteur de pc fixe et pc portable (avec connaissances appronfondies des composants), très organisés, travailleur, manuel, vidéo montage, photographie...
               </p>
             </section>
             <section>
